# workout-api-dio

./: Makefile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: e913e1c3baa8_.py
workout_api/: main.py  routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
